docs: added cmake cli build steps to readme.md for builds without clion.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,10 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMAKE")
 set(SOURCE_FILES    src/main.c)
 
+Message("")
+Message( STATUS "SOURCE entry point : " ${SOURCE_FILES} )
+Message("")
+
 # ------- End Set Vars --- #
 
 # ------- Executable ----- #
